hello-app/templates/service.yml
kind: Service
apiVersion: v1
metadata:
  name: hello
  labels:
    app: hello
spec:
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: hello
  type: ClusterIP
  sessionAffinity: None
