hello-app/templates/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello
  labels:
    app: hello
spec:
  to:
    kind: Service
    name: hello
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
